Update TON Connect fallback origin

--- a/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
+++ b/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://dynamic-capital-qazf2.ondigitalocean.app",
+  "url": "https://dynamic-capital.ondigitalocean.app",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic-capital-qazf2.ondigitalocean.app/icon-mark.svg",
+  "iconUrl": "https://dynamic-capital.ondigitalocean.app/icon-mark.svg",
   "termsOfUseUrl": "https://dynamic.capital/terms",
   "privacyPolicyUrl": "https://dynamic.capital/privacy"
 }
