--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,7 +9,6 @@ project_id = "qeejuomcapbdlhnjqjcc"
     "https://dynamiccapital.ton",
     "https://www.dynamiccapital.ton",
     "https://dynamic-capital.ondigitalocean.app",
-    "https://dynamic-capital-qazf2.ondigitalocean.app",
     "https://dynamic.capital",
     "https://dynamic-capital.vercel.app",
     "https://dynamic-capital.lovable.app",
@@ -19,7 +18,7 @@ project_id = "qeejuomcapbdlhnjqjcc"
   [functions.env]
     SITE_URL = "https://dynamiccapital.ton"
     NEXT_PUBLIC_SITE_URL = "https://dynamiccapital.ton"
-    ALLOWED_ORIGINS = "https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app,https://ton-gateway.dynamic-capital.ondigitalocean.app,https://ton-gateway.dynamic-capital.lovable.app"
+    ALLOWED_ORIGINS = "https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app,https://ton-gateway.dynamic-capital.ondigitalocean.app,https://ton-gateway.dynamic-capital.lovable.app"
     MINIAPP_ORIGIN = "https://dynamiccapital.ton"
     TELEGRAM_WEBHOOK_URL = "https://dynamiccapital.ton/webhook"
 
