--- a/.env.example
+++ b/.env.example
@@ -94,6 +94,7 @@ NEXT_PUBLIC_ECONOMIC_CALENDAR_API_KEY=
 
 # Trading & bridge connectivity
 TRADINGVIEW_WEBHOOK_SECRET=
+TRADINGVIEW_WEBHOOK_URL=https://www.tradingview.com/u/DynamicCapital-FX/
 TRADING_SIGNALS_WEBHOOK_SECRET=
 SUPABASE_SIGNALS_CHANNEL=
 EXNESS_MT5_LOGIN=
@@ -103,6 +104,7 @@ MT5_BRIDGE_WORKER_ID=
 BRIDGE_HOST=
 BRIDGE_USER=
 BRIDGE_SSH_KEY=
+METAQUOTES_ID=F83593E4
 
 # Treasury buyback bot
 BUYBACK_VENUE_ALLOWLIST=
