--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "proj:projects": "tsx scripts/project/projects-v2-update.ts",
     "proj:announce": "tsx scripts/project/release-announcer.ts",
     "proj:update-all": "npm run proj:collect && npm run proj:notes && npm run proj:readme && npm run proj:features && npm run proj:projects && npm run proj:announce",
-    "test": "node scripts/check-static-homepage.js && deno test --sloppy-imports --no-lock --no-npm --node-modules-dir=false --unsafely-ignore-certificate-errors -A --no-check",
+    "test": "node scripts/check-static-homepage.js && $(bash scripts/deno_bin.sh) test --sloppy-imports --no-lock --no-npm --node-modules-dir=false -A --no-check",
     "verify": "bash scripts/verify/verify_all.sh",
     "smoke:tunnel": "node scripts/smoke-tunnel.mjs",
     "audit": "npm audit",
